添加底部按键功能

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="title3">神舟九号：宇航员会携带什么移动应用上天？</string>
     <string name="title4">2012苹果全球开发者大会（WWDC）12日开幕</string>
     <string name="title5">Win8说：请把PC丢出窗外！</string>
+    
+    
+    <string name="news_top_left_text">新闻</string>
+    <string name="topic_top_left_text">话题</string>
+    <string name="picture_top_left_text">图片</string>
+    <string name="follow_top_left_text">跟帖</string>
+    <string name="vote_top_left_text">投票</string>
 </resources>
